# keikaku-sodan-app

./: .env.example  .env.production  .gitignore  CLAUDE.md  DEPLOYMENT.md  HANDOVER.md  IMPLEMENTATION_SUMMARY.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE3_QUICKSTART.md  README.md  TEST_CHECKLIST.md  WIREFRAME.md  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: f84416d23e66_initial_migration_with_all_tables.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py  ai_assistant.py  auth.py  consultations.py  dashboard.py  drug_info.py  medications.py  monitorings.py  network.py  organizations.py  pdf.py  plans.py  prescribing_doctors.py  staffs.py  users.py
app/database/: __init__.py  connection.py
app/models/: __init__.py  consultation.py  medication.py  medication_change.py  monitoring.py  notebook.py  organization.py  plan.py  plan_evaluation.py  prescribing_doctor.py  staff.py  user.py  user_organization.py
app/routers/: doctors.py
app/schemas/: __init__.py  consultation.py  medication.py  monitoring.py  notebook.py  organization.py  plan.py  prescribing_doctor.py  staff.py  user.py  user_organization.py
app/services/: ai_assistant_service.py  pdf_service.py
app/templates/: base.html  dashboard.html  dashboard_old.html
app/utils/: __init__.py  auth.py  kana_converter.py
claudedocs/: QUICK_FIX_SUMMARY.md  UI_ERROR_FIX_REPORT.md
deployment/: keikaku-sodan.service
openspec/: project.md
scripts/: __init__.py  backup.sh  init_db.py  seed_data.py  seed_medication_data.py  start.sh  test_phase3.py
(+50 files in other folders)
